<?xml version="1.0"?>
<package format="2">
  <name>map_merger</name>
  <version>0.0.0</version>
  <description>The map_merger package</description>
  <maintainer email="jacobmo@byu.edu">jacob</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>rospy</depend>
  <!--<depend>relative_nav</depend>-->
  <depend>rtabmap_ros</depend>
  <!--<depend>rosflight_utils</depend>-->
  <!--<depend>pcl_ros</depend>-->
  <!--<depend>pcl_conversions</depend>-->
  <depend>cmake_modules</depend>
  <!--<depend>eigen_conversions</depend>-->
  
  <export>

  </export>
</package>
